[gd_scene load_steps=6 format=2]

[ext_resource path="res://test/scenes/test.gd" type="Script" id=1]
[ext_resource path="res://test/scenes/buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://test/scenes/test_buttons.tscn" type="PackedScene" id=3]
[ext_resource path="res://test/scenes/Counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/thoth/thoth_gamestate.gd" type="Script" id=5]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="buttons" parent="." instance=ExtResource( 3 )]

[node name="a" parent="." instance=ExtResource( 4 )]
margin_left = 800.0
margin_top = 128.0
margin_right = 800.0
margin_bottom = 128.0

[node name="b" parent="." instance=ExtResource( 4 )]
margin_left = 800.0
margin_top = 256.0
margin_right = 800.0
margin_bottom = 256.0

[node name="c" parent="." instance=ExtResource( 4 )]
margin_left = 800.0
margin_top = 192.0
margin_right = 800.0
margin_bottom = 192.0

[node name="config" parent="." instance=ExtResource( 2 )]
margin_left = 768.0
margin_top = 320.0
margin_right = 768.0
margin_bottom = 320.0

[node name="ConfigState" type="Node" parent="."]
script = ExtResource( 5 )
save_filename = "config.cfg"

[connection signal="load_pressed" from="config" to="." method="_on_config_load_pressed"]
[connection signal="save_pressed" from="config" to="." method="_on_config_save_pressed"]
